@@ -78,6 +78,7 @@ Changes in Bitbake 1.9.x:
 	- Add BB_GENERATE_MIRROR_TARBALLS option, set to 0 to make git fetches 
 	  faster at the expense of not creating mirror tarballs.
 	- SRCREV handling updates, improvements and fixes from Poky
+	- Add bb.utils.lockfile() and bb.utils.unlockfile() from Poky
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
